--- a/app/src/scss/style.scss
+++ b/app/src/scss/style.scss
@@ -1,3 +1,22 @@
 @import "../../../node_modules/tailwindcss/base";
 @import "../../../node_modules/tailwindcss/components";
 @import "../../../node_modules/tailwindcss/utilities";
+
+.sidebar {
+  transform: translateX(-100%);
+  transition: all ease 0.5s;
+}
+.sidebar.active {
+  transform: translateX(0%);
+}
+@media (min-width: 768px) {
+  .sidebar {
+    transform: translateX(0px);
+  }
+}
+
+@media (min-width: 1024px) {
+  .nav-menu {
+    display: flex !important;
+  }
+}
